--- a/styles.css
+++ b/styles.css
@@ -150,12 +150,15 @@ footer {
         border-radius: 3%;
     }
 
-
+    .item {
+        width: 90%;
+    }
 
     .item2 {
         font-size: 22px;
         line-height: 150%;
         border: 1px solid #333333;
         border-radius: 8px;
+        width: 90%;
     }
 }
